# mcp-server-thehive

./: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md
.github/workflows/: release.yml
src/: lib.rs  main.rs
src/thehive/: client.rs  error.rs
tests/: integration_test.rs  mcp_stdio_test.rs
